--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Oxygen_main_menu</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
-<body id="page-1">
-    <h1 class="topic-page-1">Выбор товара</h1>
+
+<body id="page-2">
+    <a href="products.html">penis</a>
 </body>
 
 </html>
