--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,12 @@
     <title>Oxygen_main_menu</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
-
 <body id="page-2">
-    <a href="products.html">penis</a>
+    <h1 class="topic-page-1">Oxygen</h1>
+    <a href="products.html">Наши товары</a>
+    <p>
+        "Наша компания предоставляет профессиональные услуги по продаже воздуха. Здесь вы можете найти воздух на любой цвет и вкус. Ребенок вы, работяга или обычный старик, вы не можете говорить что вы дышали, пока не попробовали наш воздух. Мы начали свою работу в далеком 2023 году и заслужили доверие годами упорного труда. Наш воздух получил свисшую оценку в таких журналах как <b>nenaebalovo.com</b> и многих других всемирно известных. Купите нашу продукцию и вы не забудете о нас до конца своей жизнь. <q>Oxygen - лучше воздух в легких, чем тело в гробу</q>"
+    </p>
 </body>
 
 </html>
