--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,30 @@
 </head>
 <body id="page-2">
     <h1 class="topic-page-1">Oxygen</h1>
-    <a href="products.html">Наши товары</a>
-    <p>
-        "Наша компания предоставляет профессиональные услуги по продаже воздуха. Здесь вы можете найти воздух на любой цвет и вкус. Ребенок вы, работяга или обычный старик, вы не можете говорить что вы дышали, пока не попробовали наш воздух. Мы начали свою работу в далеком 2023 году и заслужили доверие годами упорного труда. Наш воздух получил свисшую оценку в таких журналах как <b>nenaebalovo.com</b> и многих других всемирно известных. Купите нашу продукцию и вы не забудете о нас до конца своей жизнь. <q>Oxygen - лучше воздух в легких, чем тело в гробу</q>"
+    <div id="table-main-page">
+        <table>
+            <tr>
+                <td>
+                    <img src="https://kartinkof.club/uploads/posts/2022-09/thumbs/1662343272_1-kartinkof-club-p-novie-i-krasivie-kartinki-banka-1.jpg" alt="Тут картинка банки с воздухом :D">
+                </td>
+                <td>
+                    <img src="https://kartinkof.club/uploads/posts/2022-09/thumbs/1662343288_12-kartinkof-club-p-novie-i-krasivie-kartinki-banka-19.jpg" alt="Тут картинка банки с воздухом :D">
+                </td>
+                <td>
+                    <img src="https://kartinkof.club/uploads/posts/2022-09/thumbs/1662343279_4-kartinkof-club-p-novie-i-krasivie-kartinki-banka-7.jpg" alt="Тут картинка банки с воздухом :D">
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div id="products-button">
+        <a href="products.html" id="products-button-text">Наши товары:</a>
+    </div>
+    <p id="main-page-info">
+        "Наша компания предоставляет профессиональные услуги по продаже воздуха. Здесь вы можете найти воздух на любой цвет и вкус. Ребенок вы, работяга или обычный старик, вы не можете говорить что вы дышали, пока не попробовали наш воздух. Мы начали свою работу в далеком 2023 году и заслужили доверие годами упорного труда. Наш воздух получил свисшую оценку в таких журналах как <b>neskamstoproc.com</b> и многих других всемирно известных. Купите нашу продукцию и вы не забудете о нас до конца своей жизни. <q>Oxygen - лучше воздух в легких, чем тело в гробу</q>"
     </p>
+    <div id="complain-button">
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="products-button-text" target="_blank">Пожаловаться</a>
+    </div>
 </body>
 
 </html>
