--- a/templates/products.html
+++ b/templates/products.html
@@ -34,7 +34,7 @@
             </tr>
             <tr>
                 <td>
-                    <a href="">Подробнее</a>
+                    <a href="Alp_fresh">Подробнее</a>
                 </td>
                 <td>
                     <a href="">Подробнее</a>
