--- a/templates/index.html
+++ b/templates/index.html
@@ -29,9 +29,20 @@
     <p id="main-page-info">
         "Наша компания предоставляет профессиональные услуги по продаже воздуха. Здесь вы можете найти воздух на любой цвет и вкус. Ребенок вы, работяга или обычный старик, вы не можете говорить что вы дышали, пока не попробовали наш воздух. Мы начали свою работу в далеком 2023 году и заслужили доверие годами упорного труда. Наш воздух получил свисшую оценку в таких журналах как <b>neskamstoproc.com</b> и многих других всемирно известных. Купите нашу продукцию и вы не забудете о нас до конца своей жизни. <q>Oxygen - лучше воздух в легких, чем тело в гробу</q>"
     </p>
-    <div id="complain-button">
-        <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0" id="products-button-text" target="_blank">Пожаловаться</a>
-    </div>
+    <table id="main-page-buttons-table">
+        <tr>
+            <td>
+                <div id="rates-button">
+                    <a href="rates" id="products-button-text" target="_blank">Наши отзывы</a>
+                </div>
+            </td>
+            <td>
+                <div id="complain-button">
+                    <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0" id="products-button-text" target="_blank">Пожаловаться</a>
+                </div>
+            </td>
+        </tr>
+    </table>
 </body>
 
 </html>
