--- a/templates/products.html
+++ b/templates/products.html
@@ -37,10 +37,10 @@
                     <a href="Alp_fresh">Подробнее</a>
                 </td>
                 <td>
-                    <a href="">Подробнее</a>
+                    <a href="Pug's_fart">Подробнее</a>
                 </td>
                 <td>
-                    <a href="">Подробнее</a>
+                    <a href="Sea_breaze">Подробнее</a>
                 </td>
             </tr>
         </table>
