--- a/templates/pugsfart.html
+++ b/templates/pugsfart.html
@@ -16,22 +16,22 @@
                     <table>
                         <tr>
                             <td>
-                                <h2 class="alp-fresh-topic">Альпийская свежесть</h2>
+                                <h2 class="alp-fresh-topic">Пук мопса</h2>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <h3 class="alp-fresh-born-place">Место происхождения - Альпы</h3>
+                                <h3 class="alp-fresh-born-place">Место происхождения - Кишечник мопса</h3>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <h3 class="alp-fresh-flavor">Запах - Альпийский</h3>
+                                <h3 class="alp-fresh-flavor">Запах - Жаренная радуга</h3>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <h3 class="alp-fresh-use-way">Способ применения - внутривенный</h3>
+                                <h3 class="alp-fresh-use-way">Способ применения - Через трубочку</h3>
                             </td>
                         </tr>
                     </table>
@@ -39,13 +39,13 @@
             </td>
             <td>
                 <div class="alp-fresh-image">
-                    <img src="https://kartinkof.club/uploads/posts/2022-09/thumbs/1662343272_1-kartinkof-club-p-novie-i-krasivie-kartinki-banka-1.jpg" alt="Тут картинка банки с воздухом :D" id="alp-fresh">
+                    <img src="https://kartinkof.club/uploads/posts/2022-09/thumbs/1662343288_12-kartinkof-club-p-novie-i-krasivie-kartinki-banka-19.jpg" alt="Тут картинка банки с воздухом :D">
                 </div>
             </td>
         </tr>
         <tr>
             <td>
-                <h3 class="alp-fresh-cost">Цена - 15$ за 100мл</h3>
+                <h3 class="alp-fresh-cost">Цена - 50$ за 100мл</h3>
             </td>
             <td>
                 <!-- КНОПКУ СВОЮ ДЕЛАЙ ТУТ -->
