--- a/static/css/style.css
+++ b/static/css/style.css
@@ -122,7 +122,7 @@
     border: 5px solid rgb(255, 255, 124);
     background-color: rgb(32, 254, 84);
 }
-/* PAGE3 */
+/* PAGE 3,4,5 */
 .page-3 {
     background-color: rgb(201, 255, 250);
     font-family: 'Courier New', Courier, monospace;
@@ -131,6 +131,7 @@
     border: 5px solid rgb(255, 255, 124);
     background-color: rgb(32, 254, 84);
     border-radius: 35px;
+    color: aliceblue;
 }
 .alp-fresh-table {
     margin: auto;
@@ -160,14 +161,12 @@
     border-radius: 100px;
     border: 5px solid rgb(255, 255, 124);
 }
-
-/*keyframes*/
 .alp-fresh-image {
     margin-left: 200px;
     margin-top: 10%;
 }
-/* PAGE 4 */
-#page-4 {
+/* PAGE 6 */
+#page-6 {
     background-color: rgb(201, 255, 250);
     font-family: 'Courier New', Courier, monospace;
 }
