--- a/templates/alpfresh.html
+++ b/templates/alpfresh.html
@@ -48,7 +48,9 @@
                 <h3 class="alp-fresh-cost">Цена - 15$ за 100мл</h3>
             </td>
             <td>
-                <!-- КНОПКУ СВОЮ ДЕЛАЙ ТУТ -->
+                <div class="buy-button">
+                    <a target="_blank" href="https://www.paypal.com/donate?token=x-eV6s0d0jlJ2mPsSvEN06G6pU22hNDK9vUqayU-PaUTxyhyaT2rgBy3fQvhG90rX5vV2KzJlPouatKB&locale.x=ru_RU">купить</a>
+                </div>
             </td>
         </tr>
     </table>
