--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,11 @@
     <table id="main-page-buttons-table">
         <tr>
             <td>
+                <div id="self-air-button">
+                    <a href="self_air" id="self-air-button-text" target="_blank">Наши отзывы</a>
+                </div>
+            </td>
+            <td>
                 <div id="rates-button">
                     <a href="rates" id="products-button-text" target="_blank">Наши отзывы</a>
                 </div>
