--- a/templates/rates.html
+++ b/templates/rates.html
@@ -8,7 +8,8 @@
 </head>
 
 <body id="page-6">
-    
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+    <div class="elfsight-app-bdc33896-8d21-4fc2-8b05-82752fa6870b"></div>
 </body>
 
 </html>
