--- a/templates/seabreaze.html
+++ b/templates/seabreaze.html
@@ -45,10 +45,12 @@
         </tr>
         <tr>
             <td>
-                <h3 class="alp-fresh-cost">Цена - 50$ за 100мл</h3>
+                <h3 class="alp-fresh-cost">Цена - 30$ за 100мл</h3>
             </td>
             <td>
-                <!-- КНОПКУ СВОЮ ДЕЛАЙ ТУТ -->
+                <div class="buy-button">
+                    <a target="_blank" href="hhttps://www.paypal.com/donate?token=BsqdNIboNzfhDAHwF0WpTSK8PgILTWTqga6iX79eGQjL4VW5iPQuc9oqrSNDd9slJGsvK6ydnm9NiV1W&locale.x=ru_RU">купить</a>
+                </div>
             </td>
         </tr>
     </table>
