--- a/templates/pugsfart.html
+++ b/templates/pugsfart.html
@@ -48,7 +48,9 @@
                 <h3 class="alp-fresh-cost">Цена - 50$ за 100мл</h3>
             </td>
             <td>
-                <!-- КНОПКУ СВОЮ ДЕЛАЙ ТУТ -->
+                <div class="buy-button">
+                    <a target="_blank" href="https://www.paypal.com/donate?token=1ygzG58xJ3qS8_xSWKyTYhrdC5zU_pHPCumsu-q-uhRHzN4sxtbIdtDhBNrq4Pu6vLiVGVUO8VtZn5ov&locale.x=ru_RU">купить</a>
+                </div>
             </td>
         </tr>
     </table>
