--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
         <tr>
             <td>
                 <div id="self-air-button">
-                    <a href="self_air" id="self-air-button-text" target="_blank">Наши отзывы</a>
+                    <a href="Self_air" id="self-air-button-text" target="_blank">Какой воздух подходит вам?</a>
                 </div>
             </td>
             <td>
