--- a/templates/selfair2.html
+++ b/templates/selfair2.html
@@ -17,19 +17,19 @@
         <tr>
             <td>
                 <div class="air-image-for-suggestion">
-                    <img src="https://kartinkof.club/uploads/posts/2022-09/thumbs/1662343272_1-kartinkof-club-p-novie-i-krasivie-kartinki-banka-1.jpg" alt="Тут картинка банки с воздухом :D">
+                    <img src="https://kartinkof.club/uploads/posts/2022-09/thumbs/1662343288_12-kartinkof-club-p-novie-i-krasivie-kartinki-banka-19.jpg" alt="Тут картинка банки с воздухом :D">
                 </div>
             </td>
         </tr>
         <tr>
             <td>
-                <h1 class="name-air-for-suggestion">Альпийская свежесть</h1>
+                <h1 class="name-air-for-suggestion">Пук мопса</h1>
             </td>
         </tr>
         <tr>
             <td>
                 <div class="info-air-for-suggestion-block">
-                    <a href="Alp_fresh" class="info-air-for-suggestion">Подробнее</a>
+                    <a href="Pug's_fart" class="info-air-for-suggestion">Подробнее</a>
                 </div>
             </td>
         </tr>
