--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,10 +12,74 @@
     color: aliceblue;
     font-family: 'Courier New', Courier, monospace;
 }
-/*hahhahahaha*/
-#page-7 {
+/*PAGE 7*/
+.your-air-block {
+    margin: auto;
+}
+.your-air {
+    border: 5px solid rgb(255, 255, 124);
+    background-color: rgb(32, 254, 84);
+    border-radius: 25px;
+    padding: 20px 10px;
+    font-size: 35px;
+    margin-top: 20px;
+    text-align: center;
+    width: 450px;
+    margin-left: 20px;
+    color: aliceblue;
+}
+.name-air-for-suggestion{
+    border: 5px solid rgb(255, 255, 124);
+    background-color: rgb(32, 254, 84);
+    border-radius: 25px;
+    padding: 20px 10px;
+    font-size: 35px;
+    margin-top: 30px;
+    text-align: center;
+    width: 450px;
+    margin-left: 20px;
+    color: aliceblue;
+}
+.info-air-for-suggestion {
+    border: 5px solid rgb(255, 255, 124);
+    background-color: rgb(32, 254, 84);
+    border-radius: 25px;
+    padding: 20px 10px;
+    font-size: 35px;
+    text-align: center;
+    margin-left: 150px;
+    color: aliceblue;
+    text-decoration: none;
+}
+.info-air-for-suggestion-block{
+    margin-top: 50px;
+}
+.air-image-for-suggestion img {
+    margin-top: 20px;
+    border-radius: 100px;
+    width: 500px;
+    border: 5px solid rgb(255, 255, 124);
+}
+.table-for-air-suggestion{
+    margin: auto;
+}
+.air-page-suggestion {
     background-color: rgb(201, 255, 250);
     font-family: 'Courier New', Courier, monospace;
+}
+
+#self-air-button-text{
+    text-decoration: none;
+    color: aliceblue;
+}
+#self-air-button {
+    border: 5px solid rgb(255, 255, 124);
+    background-color: rgb(32, 254, 84);
+    border-radius: 25px;
+    padding: 10px 5px;
+    font-size: 20px;
+    margin-top: 30px;
+    width: 320px;
 }
 /* OXYGEN MAIN MENU */
 #page-2 {
@@ -68,7 +132,7 @@
     margin: auto;
 }
 #main-page-buttons-table {
-    margin-left: 58.25%;
+    margin-left: 750px;
 }
 /* PRODUCTS_MENU */
 #page-1 {
@@ -129,6 +193,8 @@
     padding: 10px 5px;
     color: aliceblue;
 }
+.info-air-for-suggestion:hover,
+#self-air-button:hover,
 .buy-button:hover,
 #table-page-1 a:hover,
 #products-button:hover,
