--- a/templates/index.html
+++ b/templates/index.html
@@ -33,12 +33,12 @@
         <tr>
             <td>
                 <div id="self-air-button">
-                    <a href="Self_air" id="self-air-button-text" target="_blank">Какой воздух подходит вам?</a>
+                    <a href="Self_air" id="self-air-button-text">Какой воздух подходит вам?</a>
                 </div>
             </td>
             <td>
                 <div id="rates-button">
-                    <a href="rates" id="products-button-text" target="_blank">Наши отзывы</a>
+                    <a href="rates" id="products-button-text" >Наши отзывы</a>
                 </div>
             </td>
             <td>
