--- a/templates/products.html
+++ b/templates/products.html
@@ -45,7 +45,9 @@
             </tr>
         </table>
     </div>
-    
+    <div class="main-button-block">
+        <a class="main-button" href="/">На главную</a>
+    </div>
 </body>
 
 </html>
