--- a/templates/rates.html
+++ b/templates/rates.html
@@ -10,6 +10,9 @@
 <body id="page-6">
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
     <div class="elfsight-app-bdc33896-8d21-4fc2-8b05-82752fa6870b"></div>
+    <div class="main-button-block">
+        <a class="main-button" href="/">На главную</a>
+    </div>
 </body>
 
 </html>
