--- a/templates/seabreaze.html
+++ b/templates/seabreaze.html
@@ -9,6 +9,9 @@
 </head>
 
 <body class="page-3">
+    <div class="main-button-pr-block">
+        <a class="main-button-pr" href="/">На главную</a>
+    </div>
     <table class="alp-fresh-table">
         <tr>
             <td>
