--- a/templates/selfair3.html
+++ b/templates/selfair3.html
@@ -8,6 +8,9 @@
 </head>
 
 <body class="air-page-suggestion">
+    <div class="main-button-self-block">
+        <a class="main-button-self" href="/">На главную</a>
+    </div>
     <table class="table-for-air-suggestion">
         <tr>
             <td>
