--- a/templates/alpfresh.html
+++ b/templates/alpfresh.html
@@ -52,7 +52,7 @@
             </td>
             <td>
                 <div class="buy-button">
-                    <a target="_blank" href="https://www.paypal.com/donate?token=x-eV6s0d0jlJ2mPsSvEN06G6pU22hNDK9vUqayU-PaUTxyhyaT2rgBy3fQvhG90rX5vV2KzJlPouatKB&locale.x=ru_RU">купить</a>
+                    <a href="Added_Alp_fresh">Добавить в корзину</a>
                 </div>
             </td>
         </tr>
