--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,11 @@
     </p>
     <table id="main-page-buttons-table">
         <tr>
+             <td>
+                <div id="busket-button">
+                    <a href="Busket" id="busket-button-text">Корзина</a>
+                </div>
+            </td>
             <td>
                 <div id="self-air-button">
                     <a href="Self_air" id="self-air-button-text">Какой воздух подходит вам?</a>
