--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body id="page-2">
+    <div class = "cloud">
     <h1 class="topic-page-1">Oxygen</h1>
+    </div>
     <div id="table-main-page">
         <table>
             <tr>
@@ -31,11 +33,6 @@
     </p>
     <table id="main-page-buttons-table">
         <tr>
-             <td>
-                <div id="busket-button">
-                    <a href="Busket" id="busket-button-text">Корзина</a>
-                </div>
-            </td>
             <td>
                 <div id="self-air-button">
                     <a href="Self_air" id="self-air-button-text">Какой воздух подходит вам?</a>
@@ -48,7 +45,7 @@
             </td>
             <td>
                 <div id="complain-button">
-                    <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0" id="products-button-text" target="_blank">Пожаловаться</a>
+                    <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0" id="products-button-text" target ="_blank">Пожаловаться</a>
                 </div>
             </td>
         </tr>
