--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 .buy-button{
-    border: 5px solid rgb(255, 255, 124);
-    background-color: rgb(32, 254, 84);
+    border: 5px solid rgb(9, 9, 8);
+    background-color: rgb(255, 255, 255);
     text-align: center;
     font-size: 50px;
     padding: 20px 5px;
@@ -10,16 +10,16 @@
 }
 .buy-button a {
     text-decoration: none;
-    color: aliceblue;
-    font-family: 'Courier New', Courier, monospace;
+    color: rgb(0, 0, 0);
+    font-family: impact, sans-serif;
 }
 /*PAGE 7*/
 .your-air-block {
     margin: auto;
 }
 .your-air {
-    border: 5px solid rgb(255, 255, 124);
-    background-color: rgb(32, 254, 84);
+    border: 5px solid rgb(7, 7, 6);
+    background-color: rgb(255, 255, 255);
     border-radius: 25px;
     padding: 20px 10px;
     font-size: 35px;
@@ -27,11 +27,11 @@
     text-align: center;
     width: 450px;
     margin-left: 20px;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
 }
 .name-air-for-suggestion{
-    border: 5px solid rgb(255, 255, 124);
-    background-color: rgb(32, 254, 84);
+    border: 5px solid rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     border-radius: 25px;
     padding: 20px 10px;
     font-size: 35px;
@@ -39,17 +39,17 @@
     text-align: center;
     width: 450px;
     margin-left: 20px;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
 }
 .info-air-for-suggestion {
-    border: 5px solid rgb(255, 255, 124);
-    background-color: rgb(32, 254, 84);
+    border: 5px solid rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     border-radius: 25px;
     padding: 20px 10px;
     font-size: 35px;
     text-align: center;
     margin-left: 150px;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
     text-decoration: none;
 }
 .info-air-for-suggestion-block{
@@ -59,46 +59,35 @@
     margin-top: 20px;
     border-radius: 100px;
     width: 500px;
-    border: 5px solid rgb(255, 255, 124);
+    border: 5px solid rgb(8, 8, 6);
 }
 .table-for-air-suggestion{
     margin: auto;
 }
 .air-page-suggestion {
-    background-color: rgb(201, 255, 250);
-    font-family: 'Courier New', Courier, monospace;
+    background-color: #87CEEB;
+    font-family: impact;
 }
 
 #self-air-button-text{
     text-decoration: none;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
 }
 #self-air-button {
-    border: 5px solid rgb(255, 255, 124);
-    background-color: rgb(32, 254, 84);
+    border: 5px solid rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     border-radius: 25px;
     padding: 10px 5px;
     font-size: 20px;
     margin-top: 30px;
     width: 320px;
 }
-#busket-button-text{
-    text-decoration: none;
-    color: aliceblue;
-}
-#busket-button {
-    border: 5px solid rgb(255, 255, 124);
-    background-color: rgb(32, 254, 84);
-    border-radius: 25px;
-    padding: 10px 5px;
-    font-size: 20px;
-    margin-top: 30px;
-    width: 90px;
-}
+
+
 /* OXYGEN MAIN MENU */
 #page-2 {
-    background-color: rgb(201, 255, 250);
-    font-family: 'Courier New', Courier, monospace;
+    background-color: #87CEEB;
+    font-family: arial black;
     
 }
 #main-page-info {
@@ -107,15 +96,15 @@
     text-align: center;
     margin: auto;
     margin-top: 50px;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
     border-radius: 20px;
     padding: 30px 15px;
     font-weight: 800;
-    border: 5px solid rgb(255, 255, 124);
-    background-color: rgb(32, 254, 84);
+    border: 5px solid rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
 }
 #products-button-text {
-    color: aliceblue;
+    color: rgb(4, 5, 5);
     text-decoration: none;
 }
 #products-button {
@@ -150,17 +139,14 @@
 }
 /* PRODUCTS_MENU */
 #page-1 {
-    font-family: 'Courier New', Courier, monospace;
-    background-color: rgb(201, 255, 250);
+    font-family: impact;
+    background-color: #87CEEB;
 }
 .topic-page-1 {
     text-align: center;
-    border: 5px solid rgb(255, 255, 124);
-    background-color: rgb(32, 254, 84);
-    margin: 50px 40%;
+    margin: 40px 20%;
     padding: 20px 0px;
-    border-radius: 50px;
-    color: aliceblue;
+    color: rgba(0, 0, 0, 0.978);
 }
 
 
@@ -174,30 +160,30 @@
     width: 200px;
     border-radius: 50px;
     margin: 50px 150px;
-    border: 5px solid rgb(255, 255, 124);
+    border: 5px solid rgb(0, 0, 0);
 }
 #product-name1-page-1 {
     margin-left: 135px;
     width: 220px;
-    border: 5px solid rgb(255, 255, 124);
-    background-color: rgb(32, 254, 84);
+    border: 5px solid rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
 }
 #product-name2-page-1 {
     margin-left: 195px;
     width: 110px;
-    border: 5px solid rgb(255, 255, 124);
-    background-color: rgb(32, 254, 84);
+    border: 5px solid rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
 }
 #product-name3-page-1 {
     margin-left: 185px;
     width: 140px;
-    border: 5px solid rgb(255, 255, 124);
-    background-color: rgb(32, 254, 84);
+    border: 5px solid rgb(4, 4, 4);
+    background-color: rgb(255, 255, 255);
 }
 #table-page-1 h3 {
     padding: 10px 5px;
     border-radius: 20px;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
 }
 #table-page-1 a {
     margin-left: 198px;
@@ -205,7 +191,7 @@
     text-decoration: none;
     border-radius: 20px;
     padding: 10px 5px;
-    color: aliceblue;
+    color: rgb(3, 3, 4);
 }
 #busket-button:hover,
 .main-button-pr:hover,
@@ -218,7 +204,8 @@
 #products-button:hover,
 #complain-button:hover,
 #rates-button:hover {
-    animation:page-links-button-color-change 3s infinite ;
+    color:#f2f9fe;
+    background-color: #24334a;
 }
 #busket-button,
 .main-button-pr,
@@ -228,15 +215,15 @@
 #products-button,
 #complain-button,
 #rates-button {
-    border: 5px solid rgb(255, 255, 124);
-    background-color: rgb(32, 254, 84);
+    border: 5px solid rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
 }
 .main-button {
     font-size: 40px;
     text-decoration: none;
     border-radius: 40px;
     padding: 20px 10px;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
 }
 .main-button-block {
     margin-top: 150px;
@@ -247,7 +234,7 @@
     text-decoration: none;
     border-radius: 20px;
     padding: 10px 5px;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
 }
 .main-button-self-block {
     margin: 20px;
@@ -257,7 +244,7 @@
     text-decoration: none;
     border-radius: 40px;
     padding: 20px 10px;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
 }
 .main-button-pr-block {
     margin-top: 30px;
@@ -265,14 +252,14 @@
 }
 /* PAGE 3,4,5 */
 .page-3 {
-    background-color: rgb(201, 255, 250);
-    font-family: 'Courier New', Courier, monospace;
+    background-color: #87CEEB;
+    font-family: arial black;
 }
 .alp-fresh-table-info table {
-    border: 5px solid rgb(255, 255, 124);
-    background-color: rgb(32, 254, 84);
+    border: 5px solid rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     border-radius: 35px;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
 }
 .alp-fresh-table {
     margin: auto;
@@ -292,15 +279,15 @@
 }
 .alp-fresh-cost {
     font-size: 35px;
-    border: 5px solid rgb(255, 255, 124);
-    background-color: rgb(32, 254, 84);
+    border: 5px solid rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     border-radius: 35px;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
     padding: 30px 5px;
 }
 .alp-fresh-image img{
     border-radius: 100px;
-    border: 5px solid rgb(255, 255, 124);
+    border: 5px solid rgb(0, 0, 0);
 }
 .alp-fresh-image {
     margin-left: 200px;
@@ -308,31 +295,76 @@
 }
 /* PAGE 6 */
 #page-6 {
-    background-color: rgb(201, 255, 250);
-    font-family: 'Courier New', Courier, monospace;
+    background-color: #87CEEB;
+    font-family: arial black;
 }
 @keyframes page-1-product-button-color-change {
     0% {
-        border: 5px solid yellow;
+        border: 5px solid rgb(0, 0, 0);
     }
     50% {
-        border: 5px solid rgb(255, 255, 124);
+        border: 5px solid rgb(47, 47, 47);
     }
     100% {
-        border: 5px solid yellow;
+        border: 5px solid rgb(135, 135, 135);
     }
 }
 @keyframes page-links-button-color-change {
     0% {
-        border: 5px double yellow;
-        background-color: rgb(1, 224, 53);
+        border: 5px double rgb(0, 0, 0);
+        color:#f2f9fe;
+        background-color: #24334a;
     }
     50% {
-        border: 5px double rgb(255, 255, 124);
-        background-color: rgb(32, 254, 84);
+        border: 5px double rgb(0, 0, 0);
+        color:#f2f9fe;
+        background-color: #24334a;
     }
     100% {
-        border: 5px double yellow;
-        background-color: rgb(1, 224, 53);
+        border: 5px double rgb(0, 0, 0);
+        color:#f2f9fe;
+        background-color: #24334a;
     }
+}
+
+.cloud {
+	width: 350px; height: 120px;
+	
+	background: #f2f9fe;
+	background: linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
+	background: -webkit-linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
+	background: -moz-linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
+	background: -ms-linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
+	background: -o-linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
+	
+	border-radius: 100px;
+	-webkit-border-radius: 100px;
+	-moz-border-radius: 100px;
+	
+	position: relative;
+	margin: 120px auto 20px;
+}
+
+.cloud:after, .cloud:before {
+	content: '';
+	position: absolute;
+	background: #f2f9fe;
+	z-index: -1
+}
+
+.cloud:after {
+	width: 100px; height: 100px;
+	top: -50px; left: 50px;
+	
+	border-radius: 100px;
+	-webkit-border-radius: 100px;
+	-moz-border-radius: 100px;
+}
+
+.cloud:before {
+	width: 180px; height: 180px;
+	top: -90px; right: 50px;
+	border-radius: 200px;
+	-webkit-border-radius: 200px;
+	-moz-border-radius: 200px;
 }
