--- a/templates/alpfresh.html
+++ b/templates/alpfresh.html
@@ -52,7 +52,7 @@
             </td>
             <td>
                 <div class="buy-button">
-                    <a href="Added_Alp_fresh">Добавить в корзину</a>
+                    <a target="_blank" href="https://www.paypal.com/donate?token=1ygzG58xJ3qS8_xSWKyTYhrdC5zU_pHPCumsu-q-uhRHzN4sxtbIdtDhBNrq4Pu6vLiVGVUO8VtZn5ov&locale.x=ru_RU">купить</a>
                 </div>
             </td>
         </tr>
