--- a/templates/products.html
+++ b/templates/products.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body id="page-1">
-    <h1 class="topic-page-1">Выбор товара</h1>
+    <div class = "cloud">
+        <h1 class="topic-page-1">Выбор товара</h1>
+    </div>
     <div id="table-page-1">
         <table>
             <tr>
