--- a/templates/rates.html
+++ b/templates/rates.html
@@ -9,7 +9,7 @@
 
 <body id="page-6">
     <div class = "cloud">
-        <h1 class="topic-page-1">Oxygen</h1>
+        <h1 class="topic-page-1">Наши отзывы</h1>
     </div>
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
     <div class="elfsight-app-bdc33896-8d21-4fc2-8b05-82752fa6870b"></div>
