--- a/templates/selfair.html
+++ b/templates/selfair.html
@@ -32,7 +32,7 @@
         <tr>
             <td>
                 <div class="info-air-for-suggestion-block">
-                    <a href="Alp_fresh" class="info-air-for-suggestion">Подробнее</a>
+                    <a href="/Alp_Fresh/15" class="info-air-for-suggestion">Подробнее</a>
                 </div>
             </td>
         </tr>
