--- a/templates/selfair3.html
+++ b/templates/selfair3.html
@@ -32,7 +32,7 @@
         <tr>
             <td>
                 <div class="info-air-for-suggestion-block">
-                    <a href="Sea_breaze" class="info-air-for-suggestion">Подробнее</a>
+                    <a href="/Sea_Breaze/30" class="info-air-for-suggestion">Подробнее</a>
                 </div>
             </td>
         </tr>
