--- a/templates/seabreaze.html
+++ b/templates/seabreaze.html
@@ -52,8 +52,7 @@
             </td>
             <td>
                 <div class="buy-button">
-                    <a target="_blank" href="
-                    https://www.paypal.com/donate?token=BsqdNIboNzfhDAHwF0WpTSK8PgILTWTqga6iX79eGQjL4VW5iPQuc9oqrSNDd9slJGsvK6ydnm9NiV1W&locale.x=ru_RU">купить</a>
+                    <a href="{{price + '/V'}}">купить</a>
                 </div>
             </td>
         </tr>
