--- a/templates/selfair2.html
+++ b/templates/selfair2.html
@@ -32,7 +32,7 @@
         <tr>
             <td>
                 <div class="info-air-for-suggestion-block">
-                    <a href="Pug's_fart" class="info-air-for-suggestion">Подробнее</a>
+                    <a href="/Pug's_Fart/50" class="info-air-for-suggestion">Подробнее</a>
                 </div>
             </td>
         </tr>
