--- a/templates/total.html
+++ b/templates/total.html
@@ -15,6 +15,45 @@
     <div class="main-button-cal-block">
         <a class="main-button-cal" href="/">На главную</a>
     </div>
+    <form action="{{ url_for('submit_form') }}" method="post" class="form">
+        <div class="user">
+          <ul class="user-info">
+              <li class="user-info__item">
+                  <label for="name">Ф.И.О</label>
+                  <input type="text" name="name" id="name" placeholder="Введите ваше ФИО" required>
+              </li>
+              <li class="user-info__item">
+                  <label for="number-of-card">Номер карточки</label>
+                  <input type="number" name="number" id="number" placeholder="Введите номер вашей карточки" required>
+                  
+              </li>
+          </ul>
+          <!--Поля для адреса и даты-->
+          <ul class="address-date">
+              <li class="user-info__item">
+  
+                  <label for="address">Ваш адрес</label>
+                  <input type="text" name="address" id="address" placeholder="Укадите ваш адрес" required>
+              </li>
+              <li class="user-info__item">
+  
+                  <label for="date">Срок годности вашей карты</label>
+                  <input type="date" name="date" id="date" required>
+              </li>
+          </ul>
+          <ul class="address-date">
+            <li class="user-info__item">
+                <label for="address">Ваш e-mail</label>
+                <input type="email" name="email" id="email" placeholder="Укажитое ваш e-mail" required>
+            </li>
+            <li class="user-info__item">
+                <label for="cvv">Ваш CVV</label>
+                <input type="number" name="cvv" id="cvv" placeholder="Укажитое ваш CVV" required>
+            </li>
+         </ul>
+      </div>
+      <button class="button" type="submit">Готово!</button>
+      </form>
     {% endblock %}
 </body>
 
