--- a/templates/tryonemoretime.html
+++ b/templates/tryonemoretime.html
@@ -7,8 +7,20 @@
     <title>Oh_Error</title>
 </head>
 
-<body>
-    
+<body id="error">
+    <div class = "cloud">
+        <h1 class="topic-page-1">Ой ошибка...</h1>
+    </div>
+    <table class="pug-block">
+        <tr>
+            <td>
+                <img src="https://sobakovod.club/uploads/posts/2022-02/1644783288_2-sobakovod-club-p-sobaki-mops-grustit-2.jpg" alt="Тут грустный мопсик" class="pug">    
+            </td>
+        </tr>
+    </table>
+    <div id="buy-button">
+        <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">Попробовать ещё раз</a>
+    </div>
 </body>
 
 </html>
