--- a/static/css/style.css
+++ b/static/css/style.css
@@ -194,6 +194,7 @@
     padding: 10px 5px;
     color: rgb(3, 3, 4);
 }
+#buy-button:hover,
 .button:hover,
 .main-button-cal-block:hover,
 #v-table a:hover,
@@ -210,6 +211,7 @@
     color:#f2f9fe;
     background-color: #24334a;
 }
+#buy-button a:hover,
 .button:hover,
 .main-button-cal:hover,
 .main-button-pr-text:hover,
@@ -224,6 +226,7 @@
 #rates-button-text:hover {
     color:#b2b2b2;
 }
+#buy-button,
 .button,
 .main-button-cal-block,
 .main-button-pr,
@@ -435,27 +438,19 @@
     gap: 50px;
 }
 
-.form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 50px;
-}
-
-
 .user input {
     padding: 10px;
-    border: 1px solid #EB8028;
+    border: 1px solid #000000;
     background: inherit;
     border-radius: 5px;
     font: inherit;
-    width: 100%;
-    color: #EB8028;
+    width: 90%;
+    color: #000000;
 }
 
 .user input:focus,
 .user input:active {
-    border: 1px solid #EB8028;
+    border: 1px solid #000000;
     outline: none;
 }
 
@@ -493,6 +488,7 @@ label {
 .button {
     width: 10%;
     padding: 10px;
+    margin-top: 150px;
     min-width: 300px;
     text-align: center;
     text-decoration: none;
@@ -504,4 +500,33 @@ label {
     font: inherit;
     color: #000000;
     border: 2px solid rgb(0, 0, 0);
+}
+
+#error {
+    background-color: #87CEEB;
+}
+.pug {
+    width: 700px;
+    margin: auto;
+    border-radius: 40px;
+    border: 5px solid rgb(255, 255, 255);
+}
+.pug-block {
+    margin: auto;
+}
+#buy-button a {
+    text-align: center;
+    color: #000000;
+    text-decoration: none;
+    text-align: center;
+    text-align: center;
+}
+
+#buy-button {
+    width: 600px;
+    margin: auto;
+    text-align: center;
+    margin-top: 100px;
+    font-size: 50px;
+    border-radius: 25px;
 }
